Fix ul padding which made extra space bug

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -18,6 +18,7 @@ ul {
   flex-direction: row;
   align-items: center;
   gap: 15px;
+  padding: 0;
 }
 
 a {
